# schedule-bot

./: .dockerignore  .env.example  Dockerfile  compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 183260a5d8d5_make_date_time_column_timezone_aware.py  3f9cc504aca5_initial_tables.py  8793ee61a0bb_add_subscribers_model.py  dacdc9509f22_add_index_to_lecture_model.py  e827e553a6f6_rename_lecture_datetime_column.py
src/: bot.py  config.py  db.py  handlers.py  jobs.py  main.py  models.py  parser.py
src/handlers/: __init__.py  schedule.py  special.py  subscribers.py
src/jobs/: schedule.py
src/models/: schedule.py  subscribers.py
src/repositories/: schedule_repository.py  subscriber_repository.py
src/services/: schedule.py
src/utils/: bot_utils.py  global_utils.py  messages.py  schedule_utils.py
tests/: conftest.py  test_db.py  test_jobs.py
tests/handlers/: test_schedule.py  test_special.py  test_subscribers.py
tests/utils/: test_global_utils.py
