[tool.poetry]
name = "schedule-bot"
version = "0.1.0"
description = ""
authors = ["github-main-user <kolya.skripn@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-telegram-bot = "^21.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
