[tool.poetry]
name = "schedule-bot"
version = "0.1.0"
description = ""
authors = ["github-main-user <kolya.skripn@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-telegram-bot = {extras = ["job-queue"], version = "^21.9"}
python-dotenv = "^1.0.1"
pytz = "^2024.2"
pydantic = "^2.11.3"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.8.1"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
