[tool.poetry]
name = "schedule-bot"
version = "0.1.0"
description = ""
authors = ["github-main-user <kolya.skripn@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-telegram-bot = {extras = ["job-queue"], version = "^21.9"}
pydantic = "^2.11.3"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.8.1"
alembic = "^1.15.2"
psycopg = "^3.2.6"
psycopg-binary = "^3.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
